--- a/Dossier/src/main/resources/email-template/api-choice-template.html
+++ b/Dossier/src/main/resources/email-template/api-choice-template.html
@@ -6,7 +6,15 @@
 </head>
 <body>
 <p>Все условия кредита описаны в приложенных к письму документах. Вы принимаете условия договора?</p>
-<a th:attr="href=@{${accept_link}}">Принять</a>
-<a th:attr="href=@{${reject_link}}">Отклонить</a>
+<form th:action="${accept_link}" method="POST" style="display: inline;">
+    <button type="submit" style="background-color: #4CAF50; color: white; border: none; padding: 10px 20px; text-align: center; text-decoration: none; font-size: 16px; cursor: pointer;">
+        Принять
+    </button>
+</form>
+<form th:action="${reject_link}" method="POST" style="display: inline;">
+    <button type="submit" style="background-color: #f44336; color: white; border: none; padding: 10px 20px; text-align: center; text-decoration: none; font-size: 16px; cursor: pointer;">
+        Отклонить
+    </button>
+</form>
 </body>
 </html>
